# SipatGov

./: .env.example  .env.local  .gitignore  README.md  add_lgus.py  app.json  config.py  database.py  main.py  package-lock.json  package.json  requirements.txt  run_server.ps1  tailwind.config.js
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: auth.py  budgets.py  crawler.py  dashboard.py  documents.py  lgus.py  projects.py  (+5 more)
backend/app/models/: __init__.py  budget.py  community_report.py  crawl_job.py  document.py  lgu.py  official.py  project.py  promise.py  province.py  region.py  scraping_schedule.py  user.py
backend/app/schemas/: common.py  lgu.py  promise.py  report.py
backend/app/utils/: security.py
backend/crawler/: scrapy.cfg
backend/crawler/governance_ghost/: items.py  middlewares.py  pipelines.py  settings.py
backend/crawler/governance_ghost/pdf_pipeline/: claude_extractor.py  fallback_processor.py  mock_data.py  textract_processor.py
backend/crawler/governance_ghost/scheduler/: __init__.py  auto_scheduler.py
backend/crawler/governance_ghost/spiders/: coa_spider.py  dbm_spider.py  efoi_spider.py  philgeps_spider.py
backend/crawler/governance_ghost/validation/: __init__.py  data_validator.py  models.py
backend/supabase/: seed.sql
backend/supabase/migrations/: 001_initial_schema.sql  002_rls_and_views.sql  002_rls_policies.sql  003_scraping_schedules.sql
backend/tests/: conftest.py
(+82 files in other folders)
